build/tests/math_wrappers/c47.h

typedef bool bool_t;
typedef int16_t calcRegister_t;
typedef int32_t angularMode_t;
typedef mpz_t longInteger_t;
typedef struct {
  uint8_t bytes[16];
} decQuad;
typedef decQuad real34_t;
typedef struct {
  real34_t real;
  real34_t imag;
} complex34_t;
typedef struct {
  uint16_t matrixRows;
  uint16_t matrixColumns;
} matrixHeader_t;
typedef struct {
  matrixHeader_t header;
  real34_t matrixElements[4];
} real34Matrix_t;
typedef struct {
  matrixHeader_t header;
  complex34_t matrixElements[4];
} complex34Matrix_t;
typedef struct {
  uint64_t state;
  uint64_t inc;
} pcg32_random_t;
typedef struct {
  int32_t digits;
  int32_t exponent;
  uint8_t bits;
  uint16_t lsu[25];
} real_t;
typedef enum {
  trigSin,
  trigCos,
} trigType_t;
enum rounding {
  DEC_ROUND_CEILING,
  DEC_ROUND_UP,
  DEC_ROUND_HALF_UP,
  DEC_ROUND_HALF_EVEN,
  DEC_ROUND_HALF_DOWN,
  DEC_ROUND_DOWN,
  DEC_ROUND_FLOOR,
  DEC_ROUND_05UP,
  DEC_ROUND_MAX,
};
typedef struct {
  int32_t digits;
  int32_t emax;
  int32_t emin;
  enum rounding round;
  uint32_t traps;
  uint32_t status;
  uint8_t clamp;
} realContext_t;
enum {
  amRadian = 0,
  amDegree = 2,
  amNone = 5,
  amPolar = 16,
  amAngleMask = 15,
};
enum {
  dtLongInteger = 0,
  dtReal34 = 1,
  dtComplex34 = 2,
  dtTime = 3,
  dtDate = 4,
  dtString = 5,
  dtReal34Matrix = 6,
  dtComplex34Matrix = 7,
  dtShortInteger = 8,
  dtConfig = 9,
};
enum {
  LI_ZERO = 0,
  LI_NEGATIVE = 1,
  LI_POSITIVE = 2,
};
#define DECINF 0x40
#define DECNAN 0x20
#define DECSNAN 0x10
#define DECSPECIAL 0x70
#define EXTRA_INFO_ON_CALC_ERROR 1
#define REGISTER_X ((calcRegister_t)100)
#define REGISTER_Y ((calcRegister_t)101)
#define REGISTER_Z ((calcRegister_t)102)
#define REGISTER_T ((calcRegister_t)103)
#define REGISTER_L ((calcRegister_t)108)
#define ERR_REGISTER_LINE REGISTER_Z
#define ERROR_NONE 0
void copySourceRegisterToDestRegister(calcRegister_t source_register, calcRegister_t dest_register);
#define ERROR_ARG_EXCEEDS_FUNCTION_DOMAIN 1
#define ERROR_INVALID_DATA_TYPE_FOR_OP 24
#define ERROR_OUT_OF_RANGE 8
#define ERROR_OVERFLOW_PLUS_INF 4
#define ERROR_OVERFLOW_MINUS_INF 5
#define ERROR_RAM_FULL 11
#define ERROR_MATRIX_MISMATCH 21
#define FLAG_CARRY 0x800b
#define FLAG_CPXRES 0x8004
#define FLAG_PROPFR 0x8008
#define FLAG_OVERFLOW 0x800c
#define FLAG_SPCRES 0x8017
#define FLAG_ASLIFT 0xc023
#define FLAG_HPRP 0x802b
#define NOPARAM 9876
#define SIM_UNSIGN 0
#define SIM_1COMPL 1
#define SIM_2COMPL 2
#define SIM_SIGNMT 3
#define ifLongIntegerDoAngleReduction true
#define DECNEG 0x80
#define TI_FALSE 12
extern realContext_t ctxtReal34;
extern realContext_t ctxtReal39;
extern realContext_t ctxtReal51;
extern realContext_t ctxtReal75;
extern const real_t *const_NaN;
extern uint8_t lastErrorCode;
extern uint8_t shortIntegerMode;
extern uint8_t shortIntegerWordSize;
extern uint64_t shortIntegerMask;
extern uint64_t shortIntegerSignBit;
extern angularMode_t currentAngularMode;
extern bool_t thereIsSomethingToUndo;
extern pcg32_random_t pcg32_global;
extern int32_t significantDigits;
extern int32_t temporaryInformation;
extern uint64_t systemFlags0;
extern uint64_t systemFlags1;
#define WP34S_BigMod(x, y, res, real_context) WP34S_Mod((x), (y), (res), (real_context))
bool_t saveLastX(void);
void saveForUndo(void);
void registerMin(calcRegister_t regist1, calcRegister_t regist2, calcRegister_t dest);
void registerMax(calcRegister_t regist1, calcRegister_t regist2, calcRegister_t dest);
void elementwiseRema(void (*func)(void));
void elementwiseRemaReal(void (*func)(void));
void adjustResult(calcRegister_t res,
                  bool_t dropY,
                  bool_t setCpxRes,
                  calcRegister_t op1,
                  calcRegister_t op2,
                  calcRegister_t op3);
void processRealComplexMonadicFunction(void (*realf)(void), void (*complexf)(void));
void processRealComplexDyadicFunction(void (*realf)(void), void (*complexf)(void));
void processIntRealComplexMonadicFunction(void (*realf)(void),
                                         void (*complexf)(void),
                                         void (*shortintf)(void),
                                         void (*longintf)(void));
void processIntRealComplexDyadicFunction(void (*realf)(void),
                                        void (*complexf)(void),
                                        void (*shortintf)(void),
                                        void (*longintf)(void));
void *getRegisterDataPointer(calcRegister_t reg);
uint32_t getRegisterDataType(calcRegister_t reg);
uint32_t getRegisterTag(calcRegister_t reg);
void WP34S_Mod(const real_t *x, const real_t *y, real_t *res, realContext_t *real_context);
void elementwiseRealRema(void (*func)(void));
void elementwiseCxmaReal(void (*func)(void));
void elementwiseRealCxma(void (*func)(void));
#define amPolarCYL 64
#define amPolarSPH 128
#define TI_REGTYPE 123
#define TI_VECTOR 127