zig_src/mathematics/math_command_wrappers_runtime.zig

const build_options = @import("math_command_wrappers_build_options");
const use_fake_wp34s_harness_surface = @hasDecl(build_options, "use_fake_wp34s_harness_surface") and build_options.use_fake_wp34s_harness_surface;
pub const harness_surface_is_fake = use_fake_wp34s_harness_surface;
pub const is_testsuite_build = @hasDecl(build_options, "is_testsuite_build") and build_options.is_testsuite_build;
// Mirrors "#if defined(DMCP_BUILD) && HARDWARE_MODEL == HWM_DM42" in wp34s.c:
// the DM42 firmware uses smaller fallback buffers and reduced precision in the
// WP34S_Mod / WP34S_BigMod range reduction. Only the "dmcp" build sets it.
pub const wp34s_mod_small_buffers = @hasDecl(build_options, "wp34s_mod_small_buffers") and build_options.wp34s_mod_small_buffers;

// Heavy/cold math owners run from executable QSPI (XIP) on the flash-limited
// DM42 old_hw firmware to keep main FLASH free; host/dmcp5/macOS keep the
// normal section (no-op there). Same mechanism as the dateTime owner.
const dm42_pkg_xip = @hasDecl(build_options, "dm42_pkg_xip") and build_options.dm42_pkg_xip;
pub const code_section = if (dm42_pkg_xip)
    ".qspi"
else if (@import("builtin").target.os.tag == .macos)
    "__TEXT,__text"
else
    ".text";

// Mirrors EXTRA_INFO_ON_CALC_ERROR (src/c47/defines.h): the console
// extra-error-info path is compiled out under TESTSUITE_BUILD and on DMCP
// firmware, and kept on the hosted on-screen-keyboard simulator. Dropping it
// from the firmware also keeps the diagnostic strings out of the flash image.
pub const extra_info_on_calc_error = !is_testsuite_build and
    @import("builtin").target.os.tag != .freestanding;

pub const calcRegister_t = i16;
pub const angularMode_t = c_int;
pub const rounding_t = c_int;
pub const trigType_t = c_int;

pub const pcg32_random_t = extern struct {
    state: u64,
    inc: u64,
};

pub const NOPARAM: u16 = 9876;

pub const REGISTER_X: calcRegister_t = 100;
pub const REGISTER_Y: calcRegister_t = 101;
pub const REGISTER_Z: calcRegister_t = 102;
pub const REGISTER_T: calcRegister_t = 103;
pub const ERR_REGISTER_LINE: calcRegister_t = REGISTER_Z;
pub const REGISTER_L: calcRegister_t = 108;

pub const amRadian: angularMode_t = 0;
pub const amGrad: angularMode_t = 1;
pub const amDegree: angularMode_t = 2;
pub const amDMS: angularMode_t = 3;
pub const amMultPi: angularMode_t = 4;
pub extern fn copySourceRegisterToDestRegister(source_register: calcRegister_t, dest_register: calcRegister_t) void;
pub const amNone: angularMode_t = 5;
pub const amPolar: angularMode_t = 16;
pub const amPolarCYL: angularMode_t = 64;
pub const amPolarSPH: angularMode_t = 128;
pub const amAngleMask: u32 = 15;

pub const DEC_ROUND_CEILING: rounding_t = 0;
pub const DEC_ROUND_HALF_UP: rounding_t = 2;
pub const DEC_ROUND_HALF_EVEN: rounding_t = 3;
pub const DEC_ROUND_HALF_DOWN: rounding_t = 4;
pub const DEC_ROUND_DOWN: rounding_t = 5;
pub const DEC_ROUND_FLOOR: rounding_t = 6;

pub const trigSin: trigType_t = 0;
pub const trigCos: trigType_t = 1;

pub const dtLongInteger: u32 = 0;
pub const dtReal34: u32 = 1;
pub const dtComplex34: u32 = 2;
pub const dtTime: u32 = 3;
pub const dtDate: u32 = 4;
pub const dtString: u32 = 5;
pub const dtReal34Matrix: u32 = 6;
pub const dtComplex34Matrix: u32 = 7;
pub const dtShortInteger: u32 = 8;
pub const dtConfig: u32 = 9;

pub const LI_ZERO: u32 = 0;
pub const LI_NEGATIVE: u32 = 1;
pub const LI_POSITIVE: u32 = 2;

pub const ifLongIntegerDoAngleReduction = true;

pub const ERROR_NONE: u8 = 0;
pub const ERROR_ARG_EXCEEDS_FUNCTION_DOMAIN: u8 = 1;
pub const ERROR_INVALID_DATA_TYPE_FOR_OP: u8 = if (use_fake_wp34s_harness_surface) 2 else 24;
pub const ERROR_OUT_OF_RANGE: u8 = if (use_fake_wp34s_harness_surface) 3 else 8;
pub const ERROR_OVERFLOW_PLUS_INF: u8 = 4;
pub const ERROR_OVERFLOW_MINUS_INF: u8 = 5;
pub const ERROR_RAM_FULL: u8 = if (use_fake_wp34s_harness_surface) 6 else 11;
pub const ERROR_MATRIX_MISMATCH: u8 = if (use_fake_wp34s_harness_surface) 7 else 21;

pub const FLAG_CPXRES: i32 = 0x8004;
pub const FLAG_PROPFR: i32 = 0x8008;
pub const FLAG_CARRY: i32 = 0x800b;
pub const FLAG_OVERFLOW: i32 = 0x800c;
pub const FLAG_SPCRES: i32 = 0x8017;
pub const FLAG_ASLIFT: i32 = 0x8019;
pub const FLAG_HPRP: i32 = 0x802b;

pub const SIM_UNSIGN: u8 = 0;
pub const SIM_1COMPL: u8 = 1;
pub const SIM_2COMPL: u8 = 2;
pub const SIM_SIGNMT: u8 = 3;
pub const TI_FALSE: u8 = 12;
pub const TI_REGTYPE: u8 = 123;
pub const TI_VECTOR: u8 = 127;

pub const DECNEG: u8 = 0x80;
const DECINF: u8 = 0x40;
const DECNAN: u8 = 0x20;
const DECSNAN: u8 = 0x10;
const DECSPECIAL: u8 = 0x70;
const DECNUMUNITS = 25;

pub const real_t = extern struct {
    digits: i32,
    exponent: i32,
    bits: u8,
    lsu: [DECNUMUNITS]u16,
};

pub const real34_t = extern struct {
    bytes: [16]u8,
};

pub const complex34_t = extern struct {
    real: real34_t,
    imag: real34_t,
};

pub const matrixHeader_t = if (use_fake_wp34s_harness_surface)
    extern struct {
        matrixRows: u16,
        matrixColumns: u16,
    }
else
    packed struct(u32) {
        matrixRows: u12,
        matrixColumns: u12,
        mtag: u6,
        notUsed: u2,
    };

pub const real34Matrix_t = if (use_fake_wp34s_harness_surface)
    extern struct {
        header: matrixHeader_t,
        matrixElements: [4]real34_t,
    }
else
    extern struct {
        header: matrixHeader_t,
        matrixElements: [*c]real34_t,
    };

pub const complex34Matrix_t = if (use_fake_wp34s_harness_surface)
    extern struct {
        header: matrixHeader_t,
        matrixElements: [4]complex34_t,
    }
else
    extern struct {
        header: matrixHeader_t,
        matrixElements: [*c]complex34_t,
    };

pub const realContext_t = extern struct {
    digits: i32,
    emax: i32,
    emin: i32,
    round: rounding_t,
    traps: u32,
    status: u32,
    clamp: u8,
};

pub const mpz_struct = extern struct {
    _mp_alloc: c_int,
    _mp_size: c_int,
    _mp_d: [*c]c_ulong,
};

pub const longInteger_t = [1]mpz_struct;

pub const VoidCallback = ?*const fn () callconv(.c) void;

pub extern var ctxtReal34: realContext_t;
pub extern var ctxtReal39: realContext_t;
pub extern var ctxtReal51: realContext_t;
pub extern var ctxtReal75: realContext_t;
pub extern var shortIntegerMode: u8;
pub extern var shortIntegerWordSize: u8;
pub extern var shortIntegerMask: u64;
pub extern var shortIntegerSignBit: u64;
pub extern var currentAngularMode: angularMode_t;
pub extern var thereIsSomethingToUndo: bool;
pub extern var pcg32_global: pcg32_random_t;
pub extern var significantDigits: u8;
pub extern var temporaryInformation: u8;
pub extern var lastErrorCode: u8;
pub extern var systemFlags0: u64;
pub extern var systemFlags1: u64;
pub extern var const_NaN: *const real_t;

pub extern fn saveLastX() bool;
pub extern fn saveForUndo() void;
pub extern fn getRegisterDataType(reg: calcRegister_t) u32;
pub extern fn getRegisterTag(reg: calcRegister_t) u32;
pub extern fn getRegisterDataPointer(reg: calcRegister_t) ?*anyopaque;
pub extern fn registerMin(regist1: calcRegister_t, regist2: calcRegister_t, dest: calcRegister_t) void;
pub extern fn registerMax(regist1: calcRegister_t, regist2: calcRegister_t, dest: calcRegister_t) void;
pub extern fn adjustResult(
    res: calcRegister_t,
    drop_y: bool,
    set_cpx_res: bool,
    op1: calcRegister_t,
    op2: calcRegister_t,
    op3: calcRegister_t,
) void;
